<resources>
    <string name="app_name" translatable="false">FlashApp</string>

    <string name="yes">Oui</string>
    <string name="not">Non</string>

    <string name="add_dialog_confirm">Valider</string>
    <string name="add_dialog_cancel">Annuler</string>

    <string name="my_decks">Mes collections</string>
    <string name="add_first_deck">Ajouter votre première collection</string>
    <string name="add_deck">Add collection</string>

    <string name="new_deck">Nouvelle collection</string>
    <string name="deck_name">Nom de la collection</string>
    <string name="deck_tag">Tag ou brève description</string>

    <string name="delete">Etes-vous sûr que vous voulez supprimer?</string>

    <string name="question">Question</string>
    <string name="answer">Réponse</string>

    <string name="insert_question">Entrez votre question</string>
    <string name="insert_answer">Entrez votre réponse</string>

    <string name="tag" translatable="false">Tag: </string>
    <string name="card_number">Nombre de cartes: </string>
    <string name="play">Jouer</string>

    <string name="rotate">tourner</string>

    <string name="play_error">Avant de pouvoir jouer, ajoutez quelques cartes</string>

    <string name="win">Résultat: </string>

    <string name="error_already_exist">Échec: cette collection existe déjà</string>
    <string name="error_not_empty">Échec: le contenu ne peut pas être vide</string>

    <string name="error_img_upload">Échec: erreur lors du chargement de l\'image, veuillez réessayer</string>
    <string name="error_img_notext">Échec: vous ne pouvez pas insérer de cartes vierges, remplissez tous les espaces</string>

    <string name="tutorial">Bienvenu!\n\n
    Le but de l\'application est de créer des collections de <a href = "https://en.wikipedia.org/wiki/Flashcard">flashcards</a> qui peuvent vous aider à mémoriser ce dont vous avez besoin.\n\n
    Comment ça marche?\n\n
    Première chose à faire, créer une collection :\n
    \u2022 appuyez sur le bouton : ADD COLLECTION\n
    \u2022 insérez le nom de la collection et, si vous le souhaitez, également une étiquette ou une courte description\n
    \u2022 appuyer sur OK\n\n
    Deuxièmement, ajoutez quelques cartes:\n
    \u2022 en bas à droite, appuyez sur le bouton avec un PLUS\n
    \u2022 remplir les champs*\n
    \u2022 appuyer sur OK\n\n
    Troisième chose, jouez :\n
    en appuyant sur JOUER, vous pouvez commencer une partie. Une question apparaîtra, quand vous pensez connaître la réponse cliquez sur TOURNER, si vous avez bien fait appuyez sur le bouton vert, sinon le rouge.\n
    À la fin des cartes, vous pourrez voir votre résultat.\n\n
    *nb : Les cartes vides ne peuvent pas être ajoutées et il peut y avoir un problème avec la sélection des images, répétez la procédure en cas d\'erreur. Pour changer de carte, il suffit de cliquer dessus.\n\n
    nnb : Le nom et le tag de la collection ne sont pas modifiables.\n\n
    <b>ABOUT</b>\n
    Pour toute information ou conseil vous pouvez me retrouver sur mon site personnel : <a href = "https://riccardoventurini.dev">riccardoventurini.dev</a>\n\n
    <i><a href = "https://riccardoventurini.dev/privacy/flashapp/privacy">Je ne collecte aucun type de données, l\'application est complètement hors ligne.</a></i></string>
    <string name="i_understand">Je lis</string>

</resources>