<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <!--PLEIN ECRAN-->
    <LinearLayout
        android:id="@+id/collection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--PART SUPERIEURE-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingLeft="12dp"
                android:paddingBottom="4dp"
                android:background="@drawable/layout_bg"
                >

                <TextView
                    android:id="@+id/collection_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helveticanowdisplaymedium"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textColorHint="@color/white"
                    tools:text="Collection" />


                <TextView
                    android:id="@+id/tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticanowdisplayitalic"
                    android:text="@string/tag"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/nCartes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticanowdisplayitalic"
                    android:textSize="15dp"
                    android:text="@string/card_number"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartes_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <!--PART PLAY-->
        <LinearLayout
            android:id="@+id/layout_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:clickable="true"
                app:srcCompat="@drawable/baseline_shuffle_24"
                app:backgroundTint="@color/accent"
                app:borderWidth="0dp"
                app:elevation="0dp"/>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Space>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="50dp"
                    android:fontFamily="@font/helveticahowdisplay"
                    android:text="@string/play"
                    android:backgroundTint="@color/title"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </Space>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:backgroundTint="@color/accent"
                app:srcCompat="@android:drawable/ic_input_add"
                app:borderWidth="0dp"
                app:elevation="0dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>